tests/test183.rael.exp
Error [tests/test183.rael:1:18]: Expected a key
| catch 1 / 0 with {
|                  ^
