tests/test183.rael
catch 1 / 0 with {
    log "Please don't work"
}